fixed annoying zooming on mobiles inputs, changed font size of these to 16px.

--- a/src/style/css/contact.css
+++ b/src/style/css/contact.css
@@ -1030,7 +1030,7 @@ body {
   flex-direction: column;
   min-height: 78vh;
   width: 1240px;
-  padding: calc(var(--main-container-padd-top) + 0.3rem) 0rem;
+  padding: var(--main-container-padd-top) 0rem;
 }
 @media screen and (max-width: 1350px) {
   .typical-container-comp-with-films {
@@ -1267,7 +1267,7 @@ body {
 .contact-box .contact-input-form section input[type=text], .contact-box .contact-input-form section .contact-message-textarea {
   padding: 0px 10px;
   color: var(--white);
-  font-size: 0.88rem;
+  font-size: 1rem;
   outline: 1px solid var(--gray-5050);
   border: 1px solid transparent;
   border-radius: 4px;
