--- a/src/style/scss/home.scss
+++ b/src/style/scss/home.scss
@@ -26,7 +26,7 @@
 @mixin input-style {
 	padding: 0px 10px;
 	color: var(--white);
-	font-size: 0.88rem;
+	font-size: 1rem;
 	outline: 1px solid var(--gray-5050);
 	border: 1px solid transparent;
 	border-radius: 4px;
@@ -271,7 +271,7 @@ body {
 	flex-direction: column;
 	min-height: 78vh;
 	width: 1240px;
-	padding: calc(var(--main-container-padd-top) + 0.3rem) 0rem;
+	padding: var(--main-container-padd-top) 0rem;
 	@include tablet-1350 {
 		width: 90%;
 	}
